--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,6 @@
 #spring.h2.console.enabled=true
 #
 #server.port=9091
-#
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -24,6 +23,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
 server.port=8080
+server.address=0.0.0.0
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
